# pinecone-practice

./: debug_pinecone.py  debug_search.py  full-script.py  nuke.py  pc-bot.md  pyproject.toml  query-results.txt
customer_scenarios/: dimension_apocolypse.py  format_hell.py  metadta_expectations.py  scaling_hell.py
pinecone-project/: debug_index.py  debug_pinecone.py  main.py  news.md  obsidian_loader.py  pc-bot-query.py  pinecone_lexical_search.py  pinecone_metadata_explorer.py  pinecone_metadata_search.py  pinecone_search.py  pinecone_semantic_fields_search.py  pinecone_uploader.py  progress_monitor.py  query_model.py  rag_query.py  rag_query_claude.py  top_metadata_matches.py
pinecone-project/.claude/: settings.local.json
